--- a/www/css/slider-menu.css
+++ b/www/css/slider-menu.css
@@ -33,13 +33,14 @@ body, html {
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 220px;
+    width: 221px;
 }
 
 #wrapper.toggled #page-content-wrapper {
     margin-right: -220px;
     position: absolute;
     background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
+    z-index: 100;
 }
 
 #sidebar-wrapper {
@@ -65,6 +66,22 @@ body, html {
 #page-content-wrapper {
     width: 100%;
     height: 70px;
+}
+
+#wrapper.toggled #bottom-content-wrapper {
+    margin-right: -220px;
+    position: fixed;
+    bottom: 0;
+}
+
+#bottom-content-wrapper {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: 55px;
+    z-index: 100;
+    background: rgba(35, 47, 87, 0.9);
+    z-index: 100;
 }
 
 .sidebar-nav {
@@ -199,6 +216,40 @@ body, html {
     width: 100px;
 }
 
+.hamburger.is-closed:hover before {
+    -webkit-transform: translate3d(-100px, 0, 0);
+    -moz-transform: translate3d(-100px, 0, 0);
+    -ms-transform: translate3d(-100px, 0, 0);
+    -o-transform: translate3d(-100px, 0, 0);
+    transform: translate3d(-100px, 0, 0);
+    -webkit-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    display: block;
+    -ms-opacity: 1;
+    opacity: 1;
+}
+
+.hamburger.is-closed:hover .hamb-top {
+    -webkit-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    top: 0;
+}
+
+.hamburger.is-closed:hover .hamb-bottom {
+    -webkit-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    bottom: 0;
+}
+
 .hamburger.is-closed .hamb-top {
     -webkit-transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -300,6 +351,7 @@ body, html {
     opacity: 1;
 }
 
+
 .overlay {
     position: fixed;
     display: none;
@@ -309,7 +361,7 @@ body, html {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 50;
 }
 
 .hamb-bottom, .hamb-middle, .hamb-top {
@@ -320,12 +372,12 @@ body, html {
     background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
 }
 
-#page-content-wrapper h1,
-#page-content-wrapper h2,
-#page-content-wrapper h3,
-#page-content-wrapper h4,
-#page-content-wrapper h5,
-#page-content-wrapper h6 {
+.top-navbar h1,
+.top-navbar h2,
+.top-navbar h3,
+.top-navbar h4,
+.top-navbar h5,
+.top-navbar h6 {
     color: #DFE2E8;
 }
 
