--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,89 +1,3 @@
-.page-title {
-    font-size: 2.1rem;
-    text-align: center;
-}
-
-.tabs > li > a {
-    font-size: 1.2rem !important;
-}
-
-nav .input-field {
-    height: inherit;
-}
-
-nav .input-field label {
-    top: 5px;
-    left: auto;
-    right: 10px;
-}
-
-.nav-wrapper .input-field input[type=search] {
-    padding-left: 0rem;
-    width: 100%;
-}
-
-nav .input-field label i {
-    color: #FFF;
-}
-
-nav {
-    background: transparent;
-}
-
-nav .brand-logo {
-    padding-top: 5px;
-}
-
-.short-cart {
-    height: 240px;
-}
-
-.card-content-title {
-    font-size: 1.3rem;
-}
-
-.short-cart .card-content {
-    padding: 5px;
-}
-
-#sidenav-overlay {
-    background: transparent;
-}
-
-.page-container {
-    padding-top: 52px;
-    padding-bottom: 32px;
-}
-
-.user-interaction {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-.fav-icon {
-    width: 16px;
-    height: 16px;
-}
-
-.mess-icon {
-    width: 16px;
-    height: 16px;
-}
-
-.fav-num {
-    margin-bottom: 5px;
-}
-
-.mess-num {
-    margin-bottom: 5px;
-}
-
-#add-location img {
-    width: 45px;
-    height: 45px;
-}
-
 .nav-top {
     background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
 }
@@ -91,9 +5,101 @@ nav .brand-logo {
 .nav-bottom {
     position: fixed;
     bottom: 0;
+    z-index: 996;
+    width: 100%;
+    min-height: 56px;
+    background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
+}
+
+nav .searchnav-trigger {
+    margin: 0 18px;
+}
+
+nav .searchnav-trigger i {
+    height: 56px;
+    line-height: 56px;
+}
+
+.nav-bottom .nav-content {
+    margin-top: 5px;
     width: 100%;
 }
 
-.nav-bottom > .nav-wrapper {
-    background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
+#add-location {
+    width: 45px;
+    height: 45px;
+}
+
+.content {
+    padding-top: 53px;
+    padding-bottom: 34px;
+}
+
+.tabs .tab a:focus, .tabs .tab a:focus.active {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.sidenav .user-view .circle {
+    margin: 0 auto;
+}
+
+.sidenav li > a > i {
+    margin-right: 20px;
+}
+
+input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
+    border-bottom: 0;
+    margin-bottom: 0;
+    height: 56px;
+}
+
+.input-field input[type=search] ~ .fas {
+    position: absolute;
+    top: 1rem;
+    right: 1.4rem;
+    color: transparent;
+    cursor: pointer;
+    font-size: 2rem;
+    -webkit-transition: .3s color;
+    transition: .3s color;
+    height: 100%;
+}
+
+nav .input-field {
+    height: 56px;
+}
+
+.nav-wrapper .input-field input[type=search] {
+    padding-left: 1rem;
+    width: 100%;
+}
+
+.card .card-content {
+    padding: 8px;
+}
+
+.destination-title {
+    font-size: 1.1rem;
+}
+
+.row .col {
+    padding: 0 0.5rem;
+}
+
+.card {
+    height: 260px;
+}
+
+.user-interaction {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+}
+
+.fa-heart {
+    color: red;
+}
+
+.fav-count {
+    padding-right: 10px;
 }
