--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -1,97 +1,3 @@
-.card {
-    margin: 0;
-    color: #394158;
-    height: 100%;
-}
-
-.location-name {
-    font-size: 1.7rem;
-}
-
-.interaction-count > .col {
-    padding: 0;
-}
-
-.interaction-count {
-    margin-bottom: 0;
-    padding-top: 10px;
-}
-
-.fav-icon, .mess-icon {
-    width: 18px;
-    height: 18px;
-}
-
-.fav-num, .mess-num {
-    font-size: 1.2rem;
-}
-
-.fav-num {
-    padding-right: 5px;
-}
-
-.wish-list, .visited {
-    color: #f06659;
-}
-
-.wish-list > text, .visited > text {
-    color: #394158;
-}
-
-.interaction-count > .left-align {
-    padding-top: 5px;
-}
-
-input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #0b7bc2;
-    -webkit-box-shadow: 0 1px 0 0 #0b7bc2;
-    box-shadow: 0 1px 0 0 #0b7bc2;
-    
-}
-
-input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=url]:not(.browser-default):focus:not([readonly])+label, input[type=time]:not(.browser-default):focus:not([readonly])+label, input[type=date]:not(.browser-default):focus:not([readonly])+label, input[type=datetime]:not(.browser-default):focus:not([readonly])+label, input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, input[type=tel]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, input[type=search]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
-    color: #0b7bc2;
-}
-
-input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
-    margin: 0;
-}
-
-.collection .collection-item.avatar {
-    min-height: 70px;
-}
-
-.input-avatar {
-    top: 25px;
-}
-
-.carousel-slider img {
-    width: 372px;
-    height: 279px;
-}
-
-.carousel {
-    height: 280px;
-}
-
-.send-button {
-    position: absolute;
-    top: 1rem;
-    right: 0;
-    font-size: 1.3rem;
-}
-
-.input-field {
-    padding-right: 3rem;
-}
-
-.fa-compass {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2.1rem;
-}
-
 #back i {
     position: absolute;
     top: 1rem;
@@ -100,4 +6,36 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
 
 .nav-top {
     background: linear-gradient(to right, rgba(35, 47, 87, 1) 0%, rgba(37, 53, 96, 1) 10%, rgba(43, 67, 117, 1) 26%, rgba(63, 124, 203, 1) 79%, rgba(69, 139, 226, 1) 100%);
+}
+
+.user-view img {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    height: 104px;
+    width: 104px;
+    margin: 0 auto;
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+    border-bottom: 1px solid #0b7bc2;
+    -webkit-box-shadow: 0 1px 0 0 #0b7bc2;
+    box-shadow: 0 1px 0 0 #0b7bc2;
+}
+
+input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=url]:not(.browser-default):focus:not([readonly])+label, input[type=time]:not(.browser-default):focus:not([readonly])+label, input[type=date]:not(.browser-default):focus:not([readonly])+label, input[type=datetime]:not(.browser-default):focus:not([readonly])+label, input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, input[type=tel]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, input[type=search]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
+    color: #0b7bc2;
+}
+
+#save-button {
+    width: 100%;
+    background-color: #0b7bc2;
+}
+
+.container {
+    position: fixed;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
